2011-12-22 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Code refactoring ables to check journal device (ticket #85).
	* Add new v3 event mechanism with v2 compatibility (ticket #54).

2011-12-14 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Target registration in backend is ok when using update (ticket #110).

2011-12-09 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Correctly reports recovery information in status (ticket #106).

2011-11-21 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* 'nid_map' declaration supports multiple ranges (ticket #108).

2011-11-19 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Improve client error message (ticket #102).

2011-11-18 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Fix 'shine' man page and example model file (ticket #104).

2011-09-24 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Release: 0.910

2011-09-16 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Implement 'update' command (ticket #88).

2011-09-14 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Fix quota regression introduced in r309.

2011-09-12 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Fix error when a xmf file is missing when removing (ticket #101).

2011-09-06 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Workaround module unloading issue when a node is router and
	client (ticket #99).

2011-08-31 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Fix exception bug when loading a model file (ticket #100).

2011-08-28 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Support quota options for Lustre 1.x and 2.x (ticket #90).

2011-08-12 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Handle "mounted but not loaded" state (ticket #63).

2011-08-11 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Do not explicitly call 'modprobe lustre' in parallel (ticket #97).
	* Add more variables for paths in model file (ticket #68).

2011-02-16 Aurelien Degremont  <aurelien.degremont@cea.fr>